# reversi-server

./: .env  Cargo.toml  README.md
ddl/: game_infos.sql  progress.sql
docker/: Dockerfile  build.sh  run.sh
migrations/2021-01-04-154125_mysql_init/: up.sql
src/: config.rs  config_.rs  lib.rs  main.rs  schema.rs
src/app/: app_context.rs  graphql.rs  mod.rs  mutation.rs  query.rs  subscription.rs
src/domain/: mod.rs
src/domain/game_info/: dto.rs  service.rs
src/domain/progress/: dto.rs  progress_old.rs  service.rs
src/game/: info.rs  mod.rs  progress.rs
src/infrastructure/: database.rs  db_connect.rs  mod.rs
src/infrastructure/entitiy/: charactor.rs  droid.rs  episode.rs  game_info_entity.rs  human.rs  mod.rs
src/infrastructure/repository/: game_info_repository.rs  info_rep.rs  mod.rs
src/infrastructure/repository/game_info/: dao.rs  entitiy.rs  mod.rs  pg_dao.rs
src/infrastructure/repository/progress/: dao.rs  entitiy.rs  mod.rs  pg_dao.rs
src/util/: error.rs
test/: api_test.http
